force-app/main/default/objects/GFW_Sync_Picklist_Mapping__mdt/GFW_Sync_Picklist_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Picklist value mapping for fields</description>
    <label>GFW Sync Picklist Mapping</label>
    <pluralLabel>GFW Sync Picklist Mappings</pluralLabel>
</CustomObject>