force-app/main/default/objects/GFW_Sync_Picklist_Mapping__mdt/fields/FSDB_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>FSDB_Picklist_Value__c</fullName>
    <description>Picklist value on FSDB side that maps to GFW picklist value.</description>
    <label>FSDB Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>