force-app/main/default/objects/GFW_Sync_Picklist_Mapping__mdt/fields/GFW_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>GFW_Picklist_Value__c</fullName>
    <description>Picklist value needed to map to GFW side</description>
    <label>GFW Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>