force-app/main/default/objects/GFW_Sync_Picklist_Mapping__mdt/fields/GFW_Sync_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>GFW_Sync_Field_Mapping__c</fullName>
    <description>Fields related to this picklist mapping</description>
    <label>GFW Sync Field Mapping</label>
    <referenceTo>GFW_Sync_Field_Mapping__mdt</referenceTo>
    <relationshipLabel>GFW Sync Picklist Mappings</relationshipLabel>
    <relationshipName>GFW_Sync_Picklist_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>